# hyprlock

./: CMakeLists.txt  flake.nix
.github/workflows/: nix-build.yml  nix-ci.yml  nix.yml
assets/: example.conf
nix/: checks.nix  default.nix  overlays.nix  tester.nix
nix/tests/: default.nix
src/: defines.hpp  main.cpp
src/auth/: Auth.cpp  Auth.hpp  Fingerprint.cpp  Fingerprint.hpp  GreetdLogin.cpp  GreetdLogin.hpp  Pam.cpp  Pam.hpp  Sodium.cpp  Sodium.hpp
src/config/: ConfigDataValues.hpp  ConfigManager.cpp  ConfigManager.hpp
src/core/: Auth.cpp  Auth.hpp  LockSurface.cpp  hyprlock.cpp  hyprlock.hpp
src/helpers/: .gdb_history  MiniJsonParser.hpp  MiniJsonParserTest.cpp  MiscFunctions.cpp  NotJson.hpp  SensitiveString.hpp  test
src/renderer/: AsyncResourceGatherer.cpp  AsyncResourceManager.cpp  Renderer.cpp
src/renderer/widgets/: IWidget.cpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  PasswordInputField.cpp  PasswordInputField.hpp  SessionPicker.cpp  SessionPicker.hpp  Shadowable.cpp
tests/: CMakeLists.txt  Hyprland.conf  SensitiveString.cpp  harness.cpp  harness.hpp  headless_hyprland.conf  hyprland_test.conf  hyprlock.cpp  notjson.cpp
tests/src/: harness.cpp  harness.hpp  main.cpp
